--- a/index.html
+++ b/index.html
@@ -16,6 +16,9 @@
         <h2>The Professor's Cube</h2>
         <p>The Professor's Cube (also known as the 5×5×5 Rubik's Cube and many other names, depending on manufacturer) is a 5×5×5 version of the original Rubik's Cube. It has qualities in common with both the 3×3×3 Rubik's Cube and the 4×4×4 Rubik's Revenge, and solution strategies for both can be applied.</p>
         <img src ="5x5.jpg" alt="5x5 Rubiks Cube" width="500" height="600">
+        <h2>The Pyraminx</h2>
+        <p>The Pyraminx is a regular tetrahedron puzzle in the style of Rubik's Cube. It was made and patented by Uwe Mèffert after the original 3 layered Rubik's Cube by Ernő Rubik, and introduced by Tomy Toys of Japan (then the 3rd largest toy company in the world) in 1981.</p>
+        <img src ="pyraminx.webp" alt="Pyraminx" width="500" height="600">
         <script>
             var two_x_two = "2x2 Rubiks Cube";
             var three_x_three ="3x3 Rubiks  Cube";
